# Agentex

./: .editorconfig  .env.example  .gitignore  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init-db.sql  post-create.sh  post-start.sh
.github/: copilot-instructions.md
backend/: DATABASE.md  README.md  migrate_db.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3fa412ff2977_add_deleted_at_to_chat_sessions.py  4135ee8d8c05_create_session_tables.py  bd6fcbea44b8_create_auth_tables.py  create_llm_models_table.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  agentic_rag.py  base.py  events.py  factory.py  plan_execute.py  react.py
backend/app/api/: __init__.py  deps.py  health.py  middleware.py
backend/app/api/v1/: __init__.py  agent.py  auth.py  models.py  sessions.py  users.py
backend/app/core/: __init__.py  config.py  database.py  encryption.py  exceptions.py  logging.py  redis.py  security.py
backend/app/integrations/llm/: __init__.py  anthropic.py  base.py  factory.py  openai.py
backend/app/models/: README.md  __init__.py  api_key.py  base.py  llm_model.py  message.py  permission.py  role.py  session.py  user.py
backend/app/schemas/: __init__.py  agent.py  auth.py  llm_model.py  message.py  session.py  user.py
backend/app/services/: auth.py  llm_model.py  session.py  user.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_deps.py  test_health.py  test_sessions.py
backend/tests/models/: __init__.py  test_auth.py
docs/: AIPrompts.md  APIDesign.md  BackendDesign.md  CustomizeWsMessageProcotol.md  DatabaseDesign.md  DevelopmentPlan.md  FrontendDesign.md  ProductRequirements.md  README.md  SystemArchitecture.md
frontend/: .eslintrc.cjs  .gitignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
(+59 files in other folders)
